--- a/index.html
+++ b/index.html
@@ -20,11 +20,9 @@
         Something no one would expect about me: I'm really 
             into yoga and want to get my yoga teaching certification at some point!<br>
         Picture of my favorite place:<br>
-        <img src="acadia1.txt">
+        <img src="./trevor-hayes-nyLuIsGK87s-unsplash_1_1_.jpg">
         
-        <!-- Load external JavaScript -->
-        <script src="./trevor-hayes-nyLuIsGK87s-unsplash_1_1_.jpg"></script>
-        
+
     </body>
 
 </html>
