--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         Something no one would expect about me: I'm really 
             into yoga and want to get my yoga teaching certification at some point!<br>
         Picture of my favorite place:<br>
-        <img src="https://acadiamagic.com/images/720x480/schoodic-34a7688-720px-new.webp">
+        <img src="OIP.jpg">
         
 
     </body>
