--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         Something no one would expect about me: I'm really 
             into yoga and want to get my yoga teaching certification at some point!<br>
         Picture of my favorite place:<br>
-        <img src="acadia.html">
+        <img src="acadia.txt">
         
 
     </body>
