--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+ <!doctype html>
 
 <html>
     <head>
@@ -13,7 +13,7 @@
 
     <body>
 
-        <h1>Marissa Zelten</h1>
+        Name: Marissa<br>
         Majors: Child Study/Human Development and Education<br>
         IP Address: 192.168.1.242<br>
         The Place I Grew Up: Melrose, MA <br>
